force-app/main/default/objects/High_Value_Lead_Event__e/High_Value_Lead_Event__e.object-meta.xml
<CustomObject>
    <label>High_Value_Lead_Event</label>
    <pluralLabel>High_Value_Lead_Events</pluralLabel>
</CustomObject>