force-app/main/default/objects/High_Value_Lead_Event__e/fields/LeadEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadEmail__c</fullName>
    <label>LeadEmail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>