force-app/main/default/objects/High_Value_Lead_Event__e/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>LeadId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>