force-app/main/default/objects/High_Value_Lead_Event__e/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <label>LeadName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>