force-app/main/default/objects/High_Value_Lead_Event__e/fields/LeadValue__c.field-meta.xml
<CustomField>
    <fullName>LeadValue__c</fullName>
    <label>LeadValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>